Creation of CreateStudySession function
