# src/handlers/module.go
@@ -3,6 +3,7 @@ package handlers
 import (
 	"go-api/src/handlers/auth"
 	"go-api/src/handlers/healthcheck"
+	"go-api/src/handlers/studysession"
 
 	"go.uber.org/fx"
 )
@@ -11,5 +12,6 @@ var Module = fx.Options(
 	fx.Provide(
 		healthcheck.New,
 		auth.NewAuthHandler,
+		studysession.NewStudySessionHandler,
 	),
 )
