# src/server/server.go
@@ -3,7 +3,6 @@ package server
 import (
 	"context"
 	"go-api/config"
-	"go-api/src/services/studysession"
 	"log"
 
 	"github.com/labstack/echo/v4"
@@ -16,15 +15,11 @@ type ServerParams struct {
 
 	Lifecycle fx.Lifecycle
 	Config    *config.Config
-
-	Service studysession.StudySessionService
 }
 
 // NewServer returns a pointer to Server
 func NewServer(p ServerParams) *echo.Echo {
 	e := echo.New()
-
-	p.Service.Sample()
 
 	p.Lifecycle.Append(fx.Hook{
 		OnStart: func(context.Context) error {
